--- a/index.html
+++ b/index.html
@@ -18,16 +18,11 @@
 <body>
     <header>
         <nav>
-            <div class="logo">GameStats</div>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="leaderboard.html">Leaderboard</a>
                 <a href="profile.html" id="profile-link" class="hidden">Profile</a>
                 <div class="nav-right">
-                    <button id="theme-toggle" class="theme-toggle">
-                        <span class="light-icon">🌞</span>
-                        <span class="dark-icon">🌙</span>
-                    </button>
                     <div id="auth-buttons">
                         <button id="login-btn">Login</button>
                         <button id="signup-btn">Sign Up</button>
@@ -42,79 +37,84 @@
         <section id="score-submission" class="hidden">
             <h2>Submit Today's Scores</h2>
             <div class="games-grid">
+                <div class="game-card info-card">
+                    <h3>⏰ Games Reset In</h3>
+                    <div class="info-value" id="countdown-time">--h --m</div>
+                    <div class="info-label">until midnight local time</div>
+                </div>
+                <div class="game-card info-card">
+                    <h3>📊 Today's Progress</h3>
+                    <div class="info-value" id="today-submissions">0/14</div>
+                    <div class="info-label">games submitted today</div>
+                </div>
                 <div class="game-card">
                     <h3>📝 Wordle</h3>
-                    <button onclick="pasteFromClipboard('wordle')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://www.nytimes.com/games/wordle/index.html" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('wordle')">Submit</button>
+                    <button onclick="pasteFromClipboard('wordle')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>🌍 Worldle</h3>
-                    <button onclick="pasteFromClipboard('worldle')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://worldle.teuteuf.fr/" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('worldle')">Submit</button>
+                    <button onclick="pasteFromClipboard('worldle')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>🎌 Flagle</h3>
-                    <button onclick="pasteFromClipboard('flagle')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://www.flagle.io/" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('flagle')">Submit</button>
+                    <button onclick="pasteFromClipboard('flagle')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>✈️ Travle</h3>
-                    <button onclick="pasteFromClipboard('travle')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://travle.earth/" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('travle')">Submit</button>
+                    <button onclick="pasteFromClipboard('travle')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>📅 WhenTaken</h3>
-                    <button onclick="pasteFromClipboard('whentaken')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://whentaken.com/" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('whentaken')">Submit</button>
+                    <button onclick="pasteFromClipboard('whentaken')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>🌎 WhereTaken</h3>
-                    <button onclick="pasteFromClipboard('wheretaken')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://wheretaken.teuteuf.fr/" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('wheretaken')">Submit</button>
+                    <button onclick="pasteFromClipboard('wheretaken')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>🦅 WhereTaken US</h3>
-                    <button onclick="pasteFromClipboard('wheretaken-us')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://wheretakenusa.teuteuf.fr/" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('wheretaken-us')">Submit</button>
+                    <button onclick="pasteFromClipboard('wheretaken-us')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>🗺️ GeoGrid</h3>
-                    <button onclick="pasteFromClipboard('geogrid')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://www.geogridgame.com/" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('geogrid')">Submit</button>
+                    <button onclick="pasteFromClipboard('geogrid')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>📐 Angle</h3>
-                    <button onclick="pasteFromClipboard('angle')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://angle.wtf" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('angle')">Submit</button>
+                    <button onclick="pasteFromClipboard('angle')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>⛏️ Minecraftle</h3>
-                    <button onclick="pasteFromClipboard('minecraftle')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://minecraftle.zachmanson.com/" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('minecraftle')">Submit</button>
+                    <button onclick="pasteFromClipboard('minecraftle')" class="paste-btn">📋 Paste Score</button>
                 </div>
                 <div class="game-card">
                     <h3>🍽️ FoodGuessr</h3>
-                    <button onclick="pasteFromClipboard('foodguessr')" class="paste-btn">📋 Paste Score</button>
                     <a href="https://foodguessr.com/" target="_blank" class="game-link">Play Game</a>
-                    <button onclick="submitScore('foodguessr')">Submit</button>
+                    <button onclick="pasteFromClipboard('foodguessr')" class="paste-btn">📋 Paste Score</button>
+                </div>
+                <div class="game-card">
+                    <h3>🧇 Waffle</h3>
+                    <a href="https://wafflegame.net/" target="_blank" class="game-link">Play Game</a>
+                    <button onclick="pasteFromClipboard('waffle')" class="paste-btn">📋 Paste Score</button>
+                </div>
+                <div class="game-card">
+                    <h3>🌍 Globle</h3>
+                    <a href="https://globle-game.com" target="_blank" class="game-link">Play Game</a>
+                    <button onclick="pasteFromClipboard('globle')" class="paste-btn">📋 Paste Score</button>
                 </div>
             </div>
         </section>
     </main>
-
-    <footer>
-        <p>&copy; 2024 GameStats Leaderboard</p>
-    </footer>
 
     <div id="login-modal" class="modal hidden">
         <div class="modal-content">
