formated submit message

--- a/settings.html
+++ b/settings.html
@@ -82,6 +82,13 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="settings-item logout-section">
+                    <label>Account</label>
+                    <button id="logout-btn" class="danger-btn">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </button>
+                </div>
             </div>
         </section>
     </main>
