fixed Leaderboard Header not being 100% centered

--- a/home.html
+++ b/home.html
@@ -10,14 +10,15 @@
 <body>
     <header>
         <nav>
-            <div class="logo">GameStats</div>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="leaderboard.html">Leaderboard</a>
-                <a href="profile.html">Profile</a>
-                <div id="auth-buttons">
-                    <button id="login-btn">Login</button>
-                    <button id="signup-btn">Sign Up</button>
+                <a href="profile.html" id="profile-link" class="hidden">Profile</a>
+                <div class="nav-right">
+                    <div id="auth-buttons">
+                        <button id="login-btn">Login</button>
+                        <button id="signup-btn">Sign Up</button>
+                    </div>
                 </div>
             </div>
         </nav>
