--- a/leaderboard.html
+++ b/leaderboard.html
@@ -11,19 +11,14 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <a href="index.html">GameStats</a>
-            </div>
-            <div class="nav-links">
+            <div class="nav-links leaderboard-nav">
                 <a href="index.html">Home</a>
                 <a href="leaderboard.html">Leaderboard</a>
-                <a href="profile.html" id="profile-link">Profile</a>
-                <div class="nav-right">
-                    <div id="auth-buttons">
-                        <button id="login-btn">Login</button>
-                        <button id="signup-btn">Sign Up</button>
-                    </div>
-                </div>
+                <a href="profile.html" id="profile-link" class="hidden">Profile</a>
+            </div>
+            <div id="auth-buttons">
+                <button id="login-btn">Login</button>
+                <button id="signup-btn">Sign Up</button>
             </div>
         </nav>
     </header>
@@ -75,7 +70,6 @@
         </div>
     </div>
 
-    <!-- Signup Modal -->
     <div id="signup-modal" class="modal hidden">
         <div class="modal-content">
             <span class="close">&times;</span>
