--- a/settings.html
+++ b/settings.html
@@ -55,6 +55,43 @@
                             <button id="change-picture-btn" class="secondary-btn">Change Picture</button>
                         </div>
                     </div>
+                    <div class="settings-group">
+                        <h3>Preferences</h3>
+                        <div class="settings-item">
+                            <label>Time Zone</label>
+                            <div class="setting-control">
+                                <select id="timezone-select" class="settings-select">
+                                    <!-- UTC-12 to UTC+14 -->
+                                    <option value="Pacific/Baker">Baker Island (UTC-12)</option>
+                                    <option value="Pacific/Honolulu">Honolulu (UTC-10)</option>
+                                    <option value="America/Anchorage">Anchorage (UTC-9)</option>
+                                    <option value="America/Los_Angeles">Los Angeles (UTC-8)</option>
+                                    <option value="America/Denver">Denver (UTC-7)</option>
+                                    <option value="America/Chicago">Chicago (UTC-6)</option>
+                                    <option value="America/New_York">New York (UTC-5)</option>
+                                    <option value="America/Halifax">Halifax (UTC-4)</option>
+                                    <option value="America/Sao_Paulo">São Paulo (UTC-3)</option>
+                                    <option value="Atlantic/South_Georgia">South Georgia (UTC-2)</option>
+                                    <option value="Atlantic/Cape_Verde">Cape Verde (UTC-1)</option>
+                                    <option value="Europe/London">London (UTC+0)</option>
+                                    <option value="Europe/Berlin" selected>Berlin (UTC+1)</option>
+                                    <option value="Europe/Istanbul">Istanbul (UTC+3)</option>
+                                    <option value="Asia/Dubai">Dubai (UTC+4)</option>
+                                    <option value="Asia/Karachi">Karachi (UTC+5)</option>
+                                    <option value="Asia/Dhaka">Dhaka (UTC+6)</option>
+                                    <option value="Asia/Bangkok">Bangkok (UTC+7)</option>
+                                    <option value="Asia/Singapore">Singapore (UTC+8)</option>
+                                    <option value="Asia/Tokyo">Tokyo (UTC+9)</option>
+                                    <option value="Australia/Sydney">Sydney (UTC+10)</option>
+                                    <option value="Pacific/Noumea">Noumea (UTC+11)</option>
+                                    <option value="Pacific/Auckland">Auckland (UTC+12)</option>
+                                    <option value="Pacific/Apia">Apia (UTC+13)</option>
+                                    <option value="Pacific/Kiritimati">Kiritimati (UTC+14)</option>
+                                </select>
+                                <button id="save-timezone" class="save-btn">Save</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="settings-group">
