added login page | need to fix: with correct login says 'invalid' and signs in anyway

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="nav-links leaderboard-nav">
-                <a href="index.html">Home</a>
+                <a href="home.html">Home</a>
                 <a href="leaderboard.html">Leaderboard</a>
                 <a href="profile.html" id="profile-link" class="hidden">Profile</a>
             </div>
