--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="nav-links">
-                <a href="index.html">Home</a>
+                <a href="home.html">Home</a>
                 <a href="leaderboard.html">Leaderboard</a>
                 <a href="profile.html" id="profile-link">Profile</a>
             </div>
@@ -51,7 +51,7 @@
         <section id="login-prompt" class="hidden">
             <h2>Please Log In</h2>
             <p>You need to be logged in to view your profile.</p>
-            <button onclick="window.location.href='index.html'">Back to Home</button>
+            <button onclick="window.location.href='home.html'">Back to Home</button>
         </section>
     </main>
 
