--- a/settings.html
+++ b/settings.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="nav-links">
-                <a href="index.html">Home</a>
+                <a href="home.html">Home</a>
                 <a href="leaderboard.html">Leaderboard</a>
                 <a href="profile.html" id="profile-link">Profile</a>
             </div>
