made responsible for mobile

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="feature">
                         <i class="fas fa-puzzle-piece"></i>
-                        <span>14+ supported games</span>
+                        <span>13 supported games</span>
                     </div>
                 </div>
             </div>
